<resources>
    <string name="app_name">ConnectApp</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="inicia_sesi_n_para_continuar">Inicia Sesión para continuar</string>
    <string name="correo">Correo</string>
    <string name="password">Contraseña</string>
    <string name="iniciar_ses_on">Iniciar Sesion</string>
    <string name="crear_nueva_cuenta">Crear Nueva Cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="crear">Crear</string>
</resources>